Bug #48564 reserve scan rec for LCP
Submitted: 5 Nov 2009 12:36 Modified: 9 Nov 2009 16:39
Reporter: Bernhard Ocklin Email Updates:
Status: Closed
Category:Server: Cluster Severity:S3 (Non-critical)
Version:6.2+ OS:Any
Assigned to: Jonas Oreland Target Version:

[5 Nov 2009 12:36] Bernhard Ocklin
Description:
Make sure always one scan rec is reserved for writing LCPs so that client app gets 489
instead of NDBFS. 

Error message is missing for 489.

How to repeat:
...
[9 Nov 2009 13:10] Jonas Oreland
repeat by setting
MaxNoOfLocalScans=32
TimeBetweenLocalCheckpoints=1

and run "testScan -n ScanRead488_Mixed T1"
[9 Nov 2009 13:13] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/89803

3162 Jonas Oreland	2009-11-09
      ndb - bug#48564 - add extra reserved scan record for LCP, and modify reservation
code slightly
[9 Nov 2009 13:21] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/89805

3163 Jonas Oreland	2009-11-09
      ndb - bug#48564 - add extra reserved scan record for LCP, and modify reservation
code slightly
[9 Nov 2009 13:24] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/89807

3162 Jonas Oreland	2009-11-09
      ndb - bug#48564 - add extra reserved scan record for LCP, and modify reservation
code slightly
[9 Nov 2009 13:48] Jonas Oreland
pushed to 6.3.29 and 7.0.10
docs: If running many parallel scans, LCP (which also internally does a scan)
  could find it self not getting a scan-record, causing node to crash.

solution: 1) reserve a scan record for LCP that can't be used by "user" scans
          2) add error code 489 to list of know errors
[9 Nov 2009 16:39] Jon Stephens
Documented bugfix in the NDB-6.3.29 and 7.0.10 changelogs as follows:

        When running many parallel scans, a local checkpoint (which
        performs a scan internally) could find itself not getting a scan
        record, which led to a data node crash. Now an extra scan record
        is reserved for this purpose, and a problem with obtaining the
        scan record returns an appropriate error (error code 489, Too
        many active scans).

Closed.