ndb - bug#48564 - add extra reserved scan record for LCP, and modify reservation code slightly